# SW-Developer-IBBI

./: README.md  docker-compose.yml
Backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/backend/: main.py
