[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["limahgustavo <gustavo.limafgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
