[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["limahgustavo <gustavo.limafgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
